--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "description": "",
   "dependencies": {
     "dotenv": "^6.0.0",
+    "figlet": "^1.2.0",
+    "fs": "0.0.1-security",
     "inquirer": "^6.0.0",
     "node-spotify-api": "^1.0.7",
     "omdb": "^0.8.0",
     "request": "^2.87.0",
+    "spotify": "^0.3.0",
     "twitter": "^1.7.1"
   }
 }
